@@ -1,0 +1,104 @@
+6c6
+<   size         =               184
+---
+>   size         =               172
+61c61
+<   size         =               184
+---
+>   size         =               172
+116c116
+<   size         =               184
+---
+>   size         =               172
+171c171
+<   size         =               184
+---
+>   size         =               172
+226c226
+<   size         =               184
+---
+>   size         =               172
+281c281
+<   size         =               184
+---
+>   size         =               172
+336c336
+<   size         =               184
+---
+>   size         =               172
+391c391
+<   size         =               184
+---
+>   size         =               172
+446c446
+<   size         =               184
+---
+>   size         =               172
+501c501
+<   size         =               184
+---
+>   size         =               172
+556c556
+<   size         =               184
+---
+>   size         =               172
+611c611
+<   size         =               184
+---
+>   size         =               172
+666c666
+<   size         =               184
+---
+>   size         =               172
+721c721
+<   size         =               184
+---
+>   size         =               172
+775c775
+<   size         =               184
+---
+>   size         =               172
+830c830
+<   size         =               208
+---
+>   size         =               196
+885c885
+<   size         =               208
+---
+>   size         =               196
+940c940
+<   size         =               212
+---
+>   size         =               200
+995c995
+<   size         =               212
+---
+>   size         =               200
+1050c1050
+<   size         =               216
+---
+>   size         =               204
+1105c1105
+<   size         =               188
+---
+>   size         =               176
+1160c1160
+<   size         =               188
+---
+>   size         =               176
+1215c1215
+<   size         =               192
+---
+>   size         =               180
+1270c1270
+<   size         =               196
+---
+>   size         =               184
+1325c1325
+<   size         =               196
+---
+>   size         =               184
+1380c1380
+<   size         =               200
+---
+>   size         =               188
