@@ -1,3 +1,6 @@
+2019-12-04
+- Fix bidir export issues. Cleanup code. Fix for #195
+
 2019-11-17
 - Enable small time intervals < 60s. - #185
 - Cleanup old code
